<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/favorites"
            android:title="Favorites" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/sharedprizes"
            android:visible="false"
            android:title="Shared Prizes" />
        <item
            android:id="@+id/smartquiz"
            android:title="Smart Quiz" />
        <item
            android:id="@+id/swipe"
            android:title="Swipe and Win" />
        <item
            android:id="@+id/textquiz"
            android:title="Text Quiz" />
        <item
            android:id="@+id/survey"
            android:title="Survey" />
        <item
            android:id="@+id/receipts"
            android:title="Receipts" />
        <item
            android:id="@+id/logout"
            android:title="LogOut" />
    </group>
</menu>