<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvAddToCart"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    android:layout_margin="@dimen/_7sdp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_search"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_margin="@dimen/_3sdp"
            >
            <ImageView
                android:id="@+id/ivPic"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_loading"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="start"
            android:text=""
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvPic"
            app:layout_constraintTop_toTopOf="@+id/cvPic"
            />

        <TextView
            android:id="@+id/tvProductSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="start"
            android:text="@string/size"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/colorGray3"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/tvProductSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="start"
            android:text="M"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/colorGray3"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/tvProductSize"
            app:layout_constraintTop_toTopOf="@+id/tvProductSize"
            app:layout_constraintBottom_toBottomOf="@+id/tvProductSize"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvProductColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="start"
            android:text="Color:"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/colorGray3"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/tvProductSizeValue"
            app:layout_constraintTop_toTopOf="@+id/tvProductSize"
            app:layout_constraintBottom_toBottomOf="@+id/tvProductSize"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvProductColorValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="start"
            android:text="White"
            android:fontFamily="sans-serif"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/colorGray3"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@+id/tvProductColor"
            app:layout_constraintTop_toTopOf="@+id/tvProductColor"
            app:layout_constraintBottom_toBottomOf="@+id/tvProductColor"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tvQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="start"
            android:text="@string/qty"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="@+id/tvProductSize"
            app:layout_constraintTop_toBottomOf="@+id/tvProductSize"
            />

        <TextView
            android:id="@+id/tvQtyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="start"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            app:layout_constraintStart_toEndOf="@+id/tvQty"
            app:layout_constraintTop_toTopOf="@+id/tvQty"
            app:layout_constraintBottom_toBottomOf="@+id/tvQty"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvQty"
            />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPriceValue"
            app:layout_constraintEnd_toStartOf="@+id/tvPriceValue"
            android:layout_marginEnd="@dimen/_5sdp"
            />

        <TextView
            android:id="@+id/tvPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvQty"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvQty"
            android:layout_marginEnd="@dimen/_10sdp"
            />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="start"
            android:text="@string/status"
            android:visibility="gone"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tvQty"
            app:layout_constraintTop_toBottomOf="@+id/tvQty"
            />

        <TextView
            android:id="@+id/tvStatusValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="start"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tvStatus"
            app:layout_constraintTop_toTopOf="@+id/tvStatus"
            app:layout_constraintBottom_toBottomOf="@+id/tvStatus"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvStatus"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>