<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cvTop"
    android:layout_marginTop="@dimen/_5sdp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_alert_dialog_box">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_baseline_cancel_24"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_8sdp"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/write_comment"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/ivClose"
            app:layout_constraintStart_toStartOf="@+id/ivClose"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="start"
            />

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/please_tell_us_about_this_video"
            android:textSize="@dimen/_12sdp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="start"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_10sdp"
            android:focusable="false"
            android:clickable="false"
            >

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/name"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailID"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilName"
            app:layout_constraintStart_toStartOf="@+id/tilName"
            app:layout_constraintEnd_toEndOf="@+id/tilName"
            android:layout_marginTop="@dimen/_16sdp"
            android:focusable="false"
            android:clickable="false"
            >

            <EditText
                android:id="@+id/etEmailID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="Email ID"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWriteComment"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilEmailID"
            app:layout_constraintStart_toStartOf="@+id/tilEmailID"
            app:layout_constraintEnd_toEndOf="@+id/tilEmailID"
            android:layout_marginTop="@dimen/_16sdp"
            app:placeholderText="Start typing here..."
            >

            <EditText
                android:id="@+id/etWriteComments"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="Comment"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="5"
                android:maxLines="10"
                android:minLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gradient"
            android:elevation="@dimen/_10sdp"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/tilWriteComment"
            app:layout_constraintStart_toStartOf="@+id/tilWriteComment"
            app:layout_constraintEnd_toEndOf="@+id/tilWriteComment"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>